Update and rename sample_config.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,16 +1,16 @@
 # Startup Config
-API_ID = ""
-API_HASH = ""
-BOT_TOKEN = ""
-AUTH_CHANNEL = ""
-DATABASE_URL = ""
+API_ID = "26796802"
+API_HASH = "b8cc96196eb105c33d8ce193e5efff5c"
+BOT_TOKEN = "6478225213:AAH8oATDQxRF8V6ZnVtjkDhPl8BXe-X_94k"
+AUTH_CHANNEL = "-1001981337674"
+DATABASE_URL = "mongodb+srv://Eln:Chaik2501@cipid.4whqkv9.mongodb.net/"
 
 # Additional CDN Bots
 # MULTI_TOKEN1 = ""
 # MULTI_TOKEN2 = "" (upto 50)
 
 # Web Config
-BASE_URL = ""
+BASE_URL = "https://indexa-5ec7a8c430f7.herokuapp.com/"
 PORT = "8080"
 
 # Login Details
